--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Data Science Alchemy
+subtitle: An Amalgamation of Information on Applied Maths, Data Science, and Machine Learning
 use-site-title: true
 ---
 
